add member api for optimization
